fixed the spacing issue just need to figure out the max width sides being white

--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,7 @@ i:hover {
   font-size: 30px;
 }
 .quality__p {
-  font-size: 16px;
+  font-size: 1.5vw;
   line-height: 1.5;
 }
 .quality__button {
@@ -291,24 +291,35 @@ i:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 95vh;
+  padding-top: 1%;
   background-color: rgba(181, 247, 181, 0.444);
 }
 .steps__img {
-  width: 40%;
-  border: 6px double black;
+  width: 90%;
   margin: 3% 7%;
+  cursor: url(assets/sandwich-cursor.png) 4 12, auto;
+}
+.steps__subhead {
+  color: black;
+  font-size: 280%;
 }
 .steps__head {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  color: #0f741f;
+}
+.steps__p {
+  color: black;
 }
 .steps__description--wrapper {
   padding-bottom: 8%;
   display: flex;
+  width: 70%;
 }
 .steps__number {
   padding: 7px;
+  cursor: url(assets/big_finga.gif) 2 2, auto;
+  color: #0f741f;
 }
